src/test/scala/wacc/front_end/valid_to_invalid/printPairOfNulls.wacc
# print a pair of null pairs
# type declaration: lhs and rhs cannot both be an abstract type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(pair, pair) p = newpair(null, null) ;
  print p ;
  print " = (" ;
  pair(pair, pair) q = fst p ;
  print q ;
  print "," ;
  pair(int, bool) r = snd p ;
  print r ;
  println ")"
end
